header done with small details(magnifying glass to add, center icons vertically and fonts to add) to fix

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,11 @@
 @use '../../styles/variables' as v;
 
+.App {
+  text-align: center;
+}
+
 #wrapper {
-    max-width: 50rem;
-    width: 90vw;
+  margin: 0 auto;
+  max-width: 50rem;
+  width: 90vw;
 }
