--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,20 +1,24 @@
 .Tri {
     flex-direction: row;
+    background-color: rgb(11, 87, 86);
+    color: rgb(222, 190, 75);
+    margin: 50px 0 50px 0;
 };
 
 .cardCat{
     width: 400px;
     border: solid 10px rgb(92, 196, 167);
     border-radius: 5%;
-    margin: 50px;
-    padding: 30px;
+    margin: 30px;
+    // padding: 30px;
 };
 
 .containerCardCat{
     display: flex;
     // flex-direction: row;
     flex-wrap: wrap;
-    margin: auto;
+    justify-content: space-around;
+    margin: 50px;
 };
 
 button{
@@ -22,10 +26,6 @@ button{
     background-color: rgb(92, 196, 167);
     color: rgb(77, 58, 196);
     font-weight: bolder;
-};
-
-.Category{
-    padding: 5px;
 };
 
 input{
