--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
-$color: #fff;
-$color-primary: #61dafb;
-$color-bg: #282c34;
+$color-text: #fff;
+$color-primary: #0c7eb4;
+$color-secondary: #E99A28;
+$color-searchbar: #ebebeb;
