--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,13 +1,13 @@
 .Tri {
     flex-direction: row;
-    background-color: rgb(11, 87, 86);
+    // background-color: rgb(11, 87, 86);
     color: rgb(222, 190, 75);
     margin: 50px 0 50px 0;
 };
 
 .cardCat{
     width: 400px;
-    border: solid 10px rgb(92, 196, 167);
+    border: solid 5px rgb(92, 196, 167);
     border-radius: 5%;
     margin: 30px;
     // padding: 30px;
@@ -21,7 +21,7 @@
     margin: 50px;
 };
 
-button{
+.liveAuction-button{
     margin: 10px;
     background-color: rgb(92, 196, 167);
     color: rgb(77, 58, 196);
@@ -33,11 +33,13 @@ input{
 };
 
 body {
-    color: rgb(77, 58, 196);
+    // color: rgb(77, 58, 196);
     font-weight: bolder;
 }
 
 .liveAuction{
     border-top: solid 5px rgb(92, 196, 167);;
 }
-
+.pictureItem{
+    border-radius: 25%;
+}
