--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,23 +1,45 @@
 @use '../../styles/variables' as v;
 @use '../../styles/mixins' as m;
 
+$layout-breakpoint-tablet: 577px;
+$layout-breakpoint-desktop: 960px;
+
 .header {
-  padding: 25px;
-  border-bottom: 1px solid gray;
+  padding: 25px 0;
+  border-bottom: 1px solid #D9D9D9;
 
   &-navbar {
-    @include m.flex-center;
+    display: flex;
     justify-content: space-between;
   }
 
   &-title {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     margin: auto 0;
+
+    @media (min-width: $layout-breakpoint-tablet) {
+      font-size: 2.5rem;
+      margin: auto 0;
+    }
+  }
+
+  &-container-elements {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+  }
+
+  &-form {
+    display: none;
   }
 
   &-searchbar {
-    @include m.remove-border;
-    background-color: v.$color-searchbar;
+    display: none;
+    @media (min-width: $layout-breakpoint-tablet) {
+      @include m.remove-border;
+      background-color: v.$color-searchbar;
+    }
   }
 
   &-category, &-sell {
@@ -34,7 +56,15 @@
 }
 
 .wrapper-cart, .wrapper-category {
-  @include m.flex-center;
+  cursor: pointer;
+
+  button {
+    display: none;
+  }
+
+  @media (min-width: $layout-breakpoint-tablet) {
+    @include m.flex-center;
+  }
 }
 
 .searchbar-container {
