switching buttons to links and updated css

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,6 +23,7 @@
   &-category, &-sell {
     background-color: v.$color-text;
     @include m.buttons-style;
+    color: black;
   }
 
   &-login {
