--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,12 +1,14 @@
-@use '../../styles/variables' as v;
-@use '../../styles/mixins' as m;
+@use "../../styles/variables" as v;
+@use "../../styles/mixins" as m;
 
 $layout-breakpoint-tablet: 577px;
 $layout-breakpoint-desktop: 960px;
 
 .header {
-  padding: 25px 0;
-  border-bottom: 1px solid #D9D9D9;
+  display: flex;
+  align-items: center;
+  height: 6rem;
+  border-bottom: 1px solid #d9d9d9;
 
   &-navbar {
     display: flex;
@@ -15,19 +17,13 @@ $layout-breakpoint-desktop: 960px;
 
   &-title {
     font-size: 1.5rem;
-    margin: auto 0;
-
-    @media (min-width: $layout-breakpoint-tablet) {
-      font-size: 2.5rem;
-      margin: auto 0;
-    }
   }
 
   &-container-elements {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    gap: 1.25rem;
   }
 
   &-form {
@@ -42,20 +38,33 @@ $layout-breakpoint-desktop: 960px;
     }
   }
 
-  &-category, &-sell {
+  &-btn-sell,
+  &-btn-category {
     background-color: v.$color-text;
     @include m.buttons-style;
   }
 
-  &-login {
-    @include m.buttons-style;
-    background-color: v.$color-primary;
-    color: v.$color-text;
-    border-radius: 5px;
+  &-btn-login {
+    display: none;
+    @media (min-width: $layout-breakpoint-tablet) {
+      //@include m.buttons-style;
+      padding: 0 10px;
+      cursor: pointer;
+      background-color: v.$color-primary;
+      color: v.$color-text;
+      border-radius: 5px;
+    }
+  }
+
+  .toggler-hamburger {
+    @media (min-width: $layout-breakpoint-tablet) {
+      display: none;
+    }
   }
 }
 
-.wrapper-cart, .wrapper-category {
+.wrapper-cart,
+.wrapper-category {
   cursor: pointer;
 
   button {
