--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,25 +1,25 @@
 .Tri {
     flex-direction: row;
-    // background-color: rgb(11, 87, 86);
     color: rgb(222, 190, 75);
-    margin: 50px 0 50px 0;
+    margin: 0px 0 10px 0;
+    font-weight: bolder;
+    border-bottom: solid 1px black
 };
 
 .cardCat{
-    width: 300px;
-    // border: solid 5px rgb(92, 196, 167);
+    width: 370px;
     border-radius: 5%;
     margin: 30px;
-    // padding: 30px;
-    background-color: rgba(240, 232, 194, 0.8)
+    background-color: rgb(253,245,234)
 };
 
 .containerCardCat{
     display: flex;
-    // flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 50px;
+    margin: 10px;
+    font-weight: 500;
+
 };
 
 .liveAuction-button{
@@ -34,15 +34,3 @@
 input{
     margin: 20px;
 };
-
-// body {
-//     // color: rgb(77, 58, 196);
-//     // font-weight: bolder;
-// }
-
-// .liveAuction{
-//     // border-top: solid 5px rgb(92, 196, 167);;
-// }
-// .pictureItem{
-//     border-radius: 25%;
-// }
