--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,6 @@ $color-text: #fff;
 $color-primary: #0c7eb4;
 $color-secondary: #E99A28;
 $color-searchbar: #ebebeb;
+
+$layout-breakpoint-tablet: 577px;
+$layout-breakpoint-desktop: 960px;
