focus and repetitive margin in index file removed

--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -15,7 +15,7 @@
   text-decoration: none;
 }
 
-.categories-link:hover, .categories-link:focus {
+.categories-link:hover {
   background-color: v.$color-primary;
   color: v.$color-text;
   border: none;
