--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,9 +3,18 @@
 
 
 .Footer{
+    color: white;
+    font-weight: bold;
     background-color: v.$color-primary;
     padding: 50px;
     position: fixed;
     bottom: 0;
-    display: inline;
-}
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    &__info{
+        padding: 10px;
+    }
+    &__Pseudo {
+            padding: 10px;
+}}
