fix color in variable for the text

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 
 
 .Footer{
-    color: white;
+    color: v.$color-text ;
     font-weight: bold;
     background-color: v.$color-primary;
     padding: 50px;
