Add simple modal login with no responsive + react warning

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $color-text: #fff;
 $color-primary: #0c7eb4;
-$color-secondary: #E99A28;
+$color-secondary: #e99a28;
 $color-searchbar: #ebebeb;
+$color-lake: #6da4aa;
 
 $layout-breakpoint-tablet: 577px;
 $layout-breakpoint-desktop: 960px;
