--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,8 @@ $color-primary: #0c7eb4;
 $color-secondary: #E99A28;
 $color-searchbar: #ebebeb;
 
+$tablet-font-size: 0.8rem;
+$mobile-font-size: 0.5rem;
+
 $layout-breakpoint-tablet: 577px;
 $layout-breakpoint-desktop: 960px;
