--- a/src/components/SingleProduct/SingleProduct.scss
+++ b/src/components/SingleProduct/SingleProduct.scss
@@ -5,13 +5,11 @@
   align-items: center;
   @media screen and (max-width: v.$layout-breakpoint-desktop) {
     flex-wrap: wrap;
-    font-size: 0.8rem;
+    font-size: v.$tablet-font-size;
   }
-
   @media screen and (max-width: v.$layout-breakpoint-tablet) {
-    font-size: 0.5rem;
+    font-size: v.$mobile-font-size;
   }
-
 
   &-media {
     position: relative;
@@ -38,7 +36,6 @@
     width: 50%;
     margin-left: 1rem;
     text-align: left;
-
     @media screen and (max-width: v.$layout-breakpoint-desktop) {
       width: 100%;
       margin: 0;
