--- a/src/components/AppHeader/AppHeaderBis.scss
+++ b/src/components/AppHeader/AppHeaderBis.scss
@@ -12,16 +12,15 @@
 
   &-navbar {
     display: flex;
-    //justify-content: space-between;
     align-items: center;
     gap: 0.75rem;
 
-    // &-container {
-    //   display: flex;
-    //   justify-content: center;
-    //   align-items: center;
-    //   gap: 0.75rem;
-    // }
+    &-container {
+      display: flex;
+      justify-content: center;
+      gap: 0.75rem;
+    }
+
     @media (max-width: 830px) {
       justify-content: space-between;
     }
@@ -77,7 +76,6 @@
   }
 
   .searchbar {
-    // border: 1px solid green;
     flex: 2;
 
     display: flex;
@@ -110,8 +108,57 @@
       }
     }
 
-    @media (max-width: 610px) {
+    @media (max-width: 640px) {
       display: none;
     }
+  }
+
+   // Hamburger Menu.
+   .hamburger-menu {
+    display: inline-block;
+    position: relative;
+
+    @media (min-width: v.$layout-breakpoint-tablet) {
+      display: none;
+    }
+  }
+
+  .toggler-hamburger,
+  .hamburger-lines {
+    position: absolute;
+    display: block;
+  }
+
+  .toggler-hamburger {
+    z-index: 1;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .toggler-hamburger:hover {
+    cursor: pointer;
+  }
+
+  .line {
+    display: block;
+    width: 30px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: gray;
+    margin: 4px auto;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .hamburger-line.is-active .line:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger-line.is-active .line:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger-line.is-active .line:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
 }
