--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,8 +3,14 @@ $color-primary: #0c7eb4;
 $color-secondary: #E99A28;
 $color-searchbar: #ebebeb;
 
-$tablet-font-size: 0.8rem;
-$mobile-font-size: 0.5rem;
+$tablet-font-size-text: 0.8rem;
+$mobile-font-size-text: 0.5rem;
+
+$tablet-font-size-major: 1rem;
+$mobile-font-size-major: 0.8rem;
+
+$tablet-font-size-title: 1.5rem;
+$mobile-font-size-title: 1rem;
 
 $layout-breakpoint-tablet: 577px;
 $layout-breakpoint-desktop: 960px;
