--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $color-primary: #0c7eb4;
 $color-secondary: #e99a28;
 $color-searchbar: #ebebeb;
 $color-lake: #6da4aa;
+$color-on-lake: #F1F6F7;
 
 $tablet-font-size: 0.8rem;
 $mobile-font-size: 0.5rem;
