--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,11 +3,20 @@
 .Footer {
   display: flex;
   justify-content: center;
-  gap: 150px;
+  align-items: center;
+  flex-direction: column;
+  text-align: center; 
+  gap: 50px;
   background-color: v.$color-primary;
   color: v.$color-text;
   padding: 50px;
   line-height: 2rem;
+
+  @media (min-width: v.$layout-breakpoint-tablet) {
+    flex-direction: row;
+    text-align: left;
+    gap: 150px;
+  }
 
   &__info,
   &__Pseudo {
