--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -20,14 +20,14 @@
   align-items: center;
   padding: 5px 0;
 @media screen and (max-width: v.$layout-breakpoint-desktop) {
-  font-size: v.$tablet-font-size;
+  font-size: v.$tablet-font-size-text;
   min-width: fit-content;
   width: 100px;
   padding: 5px 10px;
 }
 
   @media screen and (max-width: v.$layout-breakpoint-tablet) {
-    font-size: v.$mobile-font-size-tablet;
+    font-size: v.$mobile-font-size-text;
     width: 75px;
   }
 }
