--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -32,6 +32,7 @@
     left: 0;
     transform: translate(calc(50vw - 50%), -30%);
     display: flex;
+    flex-direction: column;
     text-align: center;
     background-color: #ffffff;
     max-width: 28rem;
