--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,38 +1,55 @@
-.Tri {
-    color: rgb(222, 190, 75);
-    margin-bottom : 10;
-    font-weight: bolder;
-    border-bottom: solid 1px black;
-    input{
-        margin: 20px;
-    };
-};
+@use '../../styles/variables' as v;
 
-.containerCardCat{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 10px;
-    font-weight: 500;
-    flex-grow: 0;
-};
+.Sort_Choice {
+  border: solid 1px v.$color-searchbar;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 25px;
+}
+.Tri,
+.Category_Choice {
+  color: rgb(222, 190, 75);
+  margin-bottom: 10;
+  font-weight: bolder;
+  // border-bottom: solid 1px black;
+  input {
+    margin: 20px;
+  }
+}
 
-.cardCat{
-    width: 370px;
-    border-radius: 5%;
-    margin: 30px;
-    background-color: rgb(253,245,234)
-};
-.liveAuction-button{
-    margin: 10px;
-    background-color: rgb(109, 163, 187);
-    color: rgb(255, 255, 255);
-    font-weight: bolder;
-    border-radius: 55%;
-};
+.containerCardCat {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10px;
+  font-weight: 500;
+  flex-grow: 0;
+}
 
+.cardCat {
+  width: 370px;
+  border-radius: 5%;
+  margin: 30px;
+  background-color: rgb(253, 245, 234);
+}
+.liveAuction-button {
+  margin: 10px;
+  background-color: rgb(109, 163, 187);
+  color: rgb(255, 255, 255);
+  font-weight: bolder;
+  border-radius: 25px;
+  border: none;
+}
 
-.buttonPage{
-        background-color: rgb(109, 163, 187);
-        margin: 10px 100px;
+.button_container {
+  display: flex;
+  justify-content: space-around;
+  margin: 50px;
+}
+
+.buttonPage {
+  background-color: rgb(109, 163, 187);
+  color: rgb(255, 255, 255);
+  border-radius: 25px;
+  border: none;
 }
