--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -9,7 +9,7 @@
     z-index: 1;
     position: fixed;
     top: 0;
-    background-color: rgba(127, 127, 127, 0.65);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100vw;
     height: 100vh;
   }
@@ -28,14 +28,14 @@
   &.is-active {
     z-index: 2;
     position: fixed;
-    top: 30%; 
+    top: 30%;
     left: 0;
     transform: translate(calc(50vw - 50%), -30%);
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: #ffffff;
-    max-width: 28rem;
+    max-width: 26rem;
     height: 430px;
     padding: 3.375rem;
     border-radius: 5px;
@@ -49,6 +49,10 @@
     padding: 10px;
     font-family: 'Open Sans';
     margin-bottom: 10px;
+
+    &:focus {
+      border-color: #6da4aa;
+    }
   }
 
   button {
@@ -60,6 +64,11 @@
     border-radius: 5px;
     color: #ffffff;
     cursor: pointer;
+
+    &:hover {
+      -webkit-animation: action 500ms infinite alternate;
+      animation: action 500ms infinite alternate;
+    }
   }
 
   .login {
@@ -70,5 +79,23 @@
   .create-account {
     margin-top: 1.2rem;
     background-color: v.$color-primary;
+  }
+
+  @-webkit-keyframes action {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-5px);
+    }
+  }
+
+  @keyframes action {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-5px);
+    }
   }
 }
