Display login errors + finish account creation

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,8 @@ $color-searchbar: #ebebeb;
 $color-lake: #6da4aa;
 $color-on-lake: #F1F6F7;
 
+$color-error: #b23542;
+
 $tablet-font-size-text: 0.8rem;
 $mobile-font-size-text: 0.5rem;
 
