--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -25,6 +25,10 @@
     cursor: pointer;
   }
 
+  .error-message {
+    color: v.$color-error;
+  }
+
   &.is-active {
     z-index: 2;
     position: fixed;
