--- a/src/components/SingleArticle/SingleArticle.scss
+++ b/src/components/SingleArticle/SingleArticle.scss
@@ -175,6 +175,12 @@ h2 {
     border-radius: 5px;
   }
 
+  .error-message {
+    display: flex;
+    padding-bottom: 1rem;
+    color: #d40000;
+  }
+
   .auction-confirm-title {
     font-size: 1.5rem;
     margin-bottom: 2rem;
@@ -201,6 +207,9 @@ h2 {
 
     .modal-cancel-btn {
       color: black;
+    }
+    .modal-disabled-btn {
+      cursor: not-allowed;
     }
   }
 }
