--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -3,10 +3,6 @@
 .cards {
     margin-bottom: 2.5rem;
 
-    h2 {
-        margin-bottom: 1rem;
-    }
-
     &-root {
         display: flex;
         gap: 15px;
@@ -23,18 +19,19 @@
         }
     }
 
-    .first-card {
-        flex: 2;
-    }
+    // Put in StackArtcle and select with n-child.
+    // .first-card {
+    //     flex: 2;
+    // }
 
-    .second-card {
-        flex: 1;
-        display: none;
+    // .second-card {
+    //     flex: 1;
+    //     display: none;
 
-        @media (min-width: v.$layout-breakpoint-tablet) {
-            display: block;
-        }
-    }
+    //     @media (min-width: v.$layout-breakpoint-tablet) {
+    //         display: block;
+    //     }
+    // }
 
     .card-img {
         position: relative;
