--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -1,3 +1,7 @@
+section {
+  margin-bottom: 2.5rem;
+}
+
 .user-infos {
   display: flex;
   justify-content: center;
@@ -13,6 +17,6 @@
   }
 }
 
-section {
-  margin-bottom: 2.5rem;
+.section-title {
+  margin-bottom: 1.5rem;
 }
